# sivo

./: .gitignore  CLAUDE.md  DECISIONS.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: MULTI_LLM_SPEC.md  spec.md
examples/: eval_refund_policy.py  eval_tone.py  make_fixture.py
sivo/: __init__.py  assertions.py  cli.py  config.py  discovery.py  fixtures.py  judge.py  models.py  repl.py  replay.py  report.py  runner.py  store.py
sivo/providers/: __init__.py  _fallback_judge.py  anthropic.py  openai.py  registry.py
tests/: conftest.py  test_assertions.py  test_ci.py  test_config.py  test_discovery.py  test_fallback_judge.py  test_fixtures.py  test_judge.py  test_models.py  test_providers.py  test_providers_openai.py  test_repl.py  test_replay.py  test_report.py  test_runner.py  test_runner_orchestration.py  test_store.py
tests/e2e/: test_cli_jsonl.py  test_data_driven.py  test_discovery_filtering.py  test_fixture_scoping.py  test_junit_xml.py  test_multi_provider.py  test_output_formats.py  test_packaging.py  test_replay_parity.py
tests/perf/: test_large_jsonl.py
